--- a/style.css
+++ b/style.css
@@ -1,121 +1,149 @@
+:root {
+    --bgColor: #EEF0E5;
+    --darkBgColor: #163020;
+    --iconColor:#304D30
+}
+
 *{
-    margin:0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 .toolbox-cont{
-    height: 5rem;
-    background-color: black;
+    background-color: var(--darkBgColor);
+    height: 6rem;
     display: flex;
-    
     align-items: center;
 }
+
 .toolbox-priority-cont{
     height: 3rem;
-    background-color: aliceblue;
-    width: 18rem;
+    width: 20rem;
+    background-color: var(--bgColor);
     margin-left: 5rem;
     display: flex;
-    justify-content:space-evenly ;
     align-items: center;
+    justify-content: space-evenly;
 }
+
 .color{
     height: 1.5rem;
     width: 3rem;
-    
 }
+
 .red{
-     background-color: red;
+    background-color: #750E21;
 }
+
 .blue{
-    background-color: green;
+    background-color: #213555;
 }
+
 .green{
-    background-color: blue;
+    background-color: #163020;
 }
-.black{
-    background-color: black;
+
+.pink{
+    background-color: #E9D5DA;
 }
+
 .action-btn-cont{
-    height:3rem;
-    background-color: aliceblue;
+    height: 3rem;
     width: 10rem;
+    background-color: var(--bgColor);
     margin-left: 5rem;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
+
 .add-btn{
     font-size: 1.75rem;
+    color: var(--darkBgColor);
 }
+
 .remove-btn{
     font-size: 1.5rem;
+    color: var(--darkBgColor);
 }
-.modal-cont{
-    height: 50vh;
-    width: 50vw;
-    /* background-color: gray; */
-    display: none;
-    border: 2px solid gray;
-    position: absolute;
-    left: 25vw;
-    top: 25vh;
-}
-.textarea-cont{
-    height: 100%;
-    width: 75%;
-    outline: none;
-    /* border-right: 2px solid gray; */
-    border: none;
-    font-size: 2rem;
-    padding: 2rem;
-    resize: none;
-}
-.priority-color-cont{
-    background-color: aliceblue;
-    height: 100%;
-    width: 25%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-evenly;
-    border-left: 2px solid grey;
-    
-}
-.priority-color{
-    height: 3rem;
-    width: 5rem;   
-}
+
 .main-cont{
-    margin-top:5rem ;
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
     justify-content: space-evenly;
-    /* flex-direction: column;
-    align-items: ;
-    border-left: 2px solid rgb(161, 21, 21); */ 
+    margin:2rem 1rem;
 }
+
 .ticket-cont{
     height: 10rem;
     width: 15rem;
-    background-color:yellowgreen ;
+    background-color: yellow;
+    position: relative;
+    background-color: var(--bgColor);
+}
 
-}
 .ticket-color{
-    height:1rem ;
+    height: 1rem;
 }
+
 .ticket-id{
-    background-color: orange;
     height: 1.5rem;
     font-weight: 600;
-    font-size: 0.75rem;  
+    font-size: 0.75rem;
 }
+
 .ticket-area{
-    height: 7.5rem;
-    padding: 5px;
-    font-size: 1.25rem;
+    padding: 3px;
+    height: calc(10rem - 1rem - 1.5rem);
+    font-size: 1rem;
+    outline: none;
 }
+
+.modal-cont{
+    height: 50vh;
+    width: 50vw;
+    display: none;
+    border: 2px solid grey;
+    position: fixed;
+    left: 25vw;
+    top: 25vh;
+}
+
+.textarea-cont{
+    height: 100%;
+    width: 75%;
+    outline: none;
+    border: none;
+    resize: none;
+    font-size: 2rem;
+    padding: 2rem;
+    border-right: 2px solid grey;
+}
+
+.priority-color-cont{
+    height: 100%;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: var(--bgColor);
+
+}
+
+.priority-color{
+    height: 3rem;
+    width: 5rem;
+}
+
 .active{
-    border: 5px solid black;
+    border: 5px solid #FFEA11;
+}
+
+.lock-unlock-btn{
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
 }
